[gd_scene load_steps=3 format=2]

[ext_resource path="res://GraphGrammar/GraphBuilder/GUIS/RuleSelection.gd" type="Script" id=1]
[ext_resource path="res://GraphGrammar/GrammarRules/Resources/GRuleInfoReader.gd" type="Script" id=2]

[node name="RuleSelection" type="GridContainer"]
offset_right = 499.0
offset_bottom = 32.0
columns = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
rule_info_reader = ExtResource( 2 )

[node name="RuleName" type="Label" parent="."]
offset_top = 5.0
offset_right = 70.0
offset_bottom = 19.0
text = "Rule Name"

[node name="ViewRuleButton" type="Button" parent="."]
offset_left = 74.0
offset_right = 148.0
offset_bottom = 24.0
text = "View Rule"

[node name="Executions" type="LineEdit" parent="."]
offset_left = 152.0
offset_right = 210.0
offset_bottom = 24.0
placeholder_text = "n executions"

[node name="DeleteRuleButton" type="Button" parent="."]
offset_left = 214.0
offset_right = 301.0
offset_bottom = 24.0
text = "Delete Rule"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NodeContainer" type="Node2D" parent="."]

[connection signal="text_changed" from="Executions" to="." method="_on_Executions_text_changed"]
[connection signal="pressed" from="DeleteRuleButton" to="." method="_on_DeleteRuleButton_pressed"]
